--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Developed by Md Shadman">
     <title>A Digital Analog Clock</title>
     <link rel="stylesheet" href="style.css" type="text/css" media="all">
     <script src="script.js" defer></script>
